# webrtc-bench

./: .gitattributes  .gitignore  Dockerfile  FIELD_TRIALS.md  LICENSE  README.md  auto-receiver.Dockerfile  auto-sender.Dockerfile  auto-traceroute.Dockerfile  docker-build.ps1  docker-push.ps1  generate_testdata.sh  go.mod  go.sum
additional_code/gcc-tester/: .gitignore  CMakeLists.txt  arm_runtime_stubs.cpp  fake_track_source.cpp  fake_track_source.h  ffmpeg_receiver_sink.cpp  ffmpeg_receiver_sink.h  h264_only_factory.h  main.cpp  syncodec_decoder_factory.h  syncodec_encoder_factory.h  syncodecs.cpp  syncodecs.h  webrtc_test_peer.cpp  webrtc_test_peer.h
additional_code/libwebrtc_diffs/: modifications.diff
additional_code/pion_interceptor_diffs/: modifications.diff
analysis/: .gitignore  avg_reconfigs_per_minute.py  bitrate_comparison.py  cdf.py  cdf_fps.py  cdf_gcc_delay_trend.py  cdf_loss_rate.py  cdf_rtt.py  cdf_visualization.py  convert_csv.py  data_exploration.py  day_analysis.py  export_gcc_trend_trace.py  find_high_loss_segments.py  find_no_reconfig_bitrate_drops.py  find_zero_bitrate.py  gcc_prediction_v2.py  graph_stats.py  guard_trigger_eval.py  loss_reconfig_comparison.py  parquet_to_csv.py  pyproject.toml  reconfiguration_distribution.py  timing-graphs.py  weather_correlation.py
analysis/loaders/: dishy.py  guard_triggers.py  icmp_ping.py  iperf.py  irtt.py  measurement.py  parquet.py  probes.py  weather.py
analysis_old/: cdf_visualization.py  data_exploration.py  day_analysis.py  gcc_prediction.py  parquet_to_csv.py
cmd/orchestrator/: orchestrator.go
cmd/peer/: peer.go
cmd/run-case/: run-case.go
internal/cases/: case.go  chrome_connect.go  chrome_connect.js  chrome_video.go  chrome_video.js  connect.go  iperf_udp.go  libwebrtc_video.go  pion_connect.go  pion_video.go  teams_video.go  teams_video.js  teams_video_prefs.json  teams_video_proxy_patch.js  video.go
internal/cases/stats/: collector.go  pion_collector.go
internal/cases/testsource/: rtp.go
internal/dishy/: combined.pb.go  combined_grpc.pb.go  status.pb.go
internal/dishy/proto/: combined.proto  status.proto
internal/management/: client.go  messages.go  server.go
internal/pinger/: data.go  pinger.go
internal/pion/scream/: receiver_interceptor.go  receiver_interceptor_linux.go  receiver_interceptor_windows.go  receiver_option.go  receiver_option_windows.go  rtp_queue.go  scream.go  scream_linux.go  sender_interceptor.go  sender_interceptor_linux.go  sender_interceptor_windows.go  sender_option.go  sender_option_linux.go  sender_option_windows.go
internal/pion/seqrecorder/: seqrecorder.go
internal/results/: parquet.go  types.go
internal/util/: chrome_helpers.go  error.go  json_duration.go  metadata.go
