[tool.poetry]
name = "webrtc-bench-analysis"
version = "0.1.0"
description = ""
authors = ["Yannis Matezki <git@yannismate.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^20.0.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
pysimplegui = "^5.0.8.3"
plotly = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
