[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cartopy>=0.24.1",
    "latex>=0.7.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.0.250703",
    "pyarrow>=21.0.0",
    "pyfonts>=1.2.0",
    "seaborn>=0.13.2",
    "simplekml>=1.3.6",
]
